# my_pkg_manager

./: .gitignore  Cargo.toml  README.md
dir_test/: copy_test.py
python_test/: check_build_hash.py  check_class_attribute.py  check_repodata.py  check_repodata_v2.py  check_repodata_v3.py  parse_cmd_parse.py  version_check.py
src/: main.rs
