[package]
name = "my_pkg_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
console = "0.16.1"
indicatif = "0.17.9"
itertools = "0.13.0"
miette = { version = "7.3.0"}
rattler = { version = "0.38.4", features = ["indicatif", "cli-tools"]}
rattler_cache = "0.4.1"
rattler_conda_types = "0.40.4"
rattler_networking = { version = "0.25.21", features = ["gcs", "s3", "system-integration", "netrc-rs"]}
rattler_repodata_gateway = { version = "0.24.14", features = ["gateway"] }
rattler_solve = { version = "3.0.9", features = ["resolvo", "libsolv_c"]}
rattler_virtual_packages = "2.2.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "gzip", "stream"] }
reqwest-middleware = "0.4.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
